# tf2-cfg

./: .gitignore  Makefile  README  autoexec.cfg  listenserver.cfg  motd.txt  pyproject.toml
user/: .CLASSES  autoconfig.cfg  autoexec.cfg  bad-dad-aliases.cfg  bad-dad-keybinds.cfg  bad-dad-keyboard.cfg  bad-dad-reset.cfg  demoman.cfg  engineer.cfg  game_overrides.cfg  heavyweapons.cfg  medic.cfg  modules.cfg  pre_comfig.cfg  pyro.cfg  scout.cfg  sniper.cfg  soldier.cfg  spy.cfg  tf2-monitor.cfg  tf2mon.cfg
