[project]
name = "tf2-cfg"
version = "1.0.0"
description = "Team Fortress 2 Configuration"
authors = [
    {name = "Russel Lane", email = "russel@rlane.com"}
]
license = {text = "MIT"}
readme = "README"
keywords = ["tf2", "team-fortress-2", "steam", "valve"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: First Person Shooters"
]

[project.urls]
Homepage = "https://github.com/russellane/tf2mon"

# vim: set ts=4 sw=4 et:
